--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          chmod +x build-packmol.sh
+          bash build-packmol.sh
           python -m pip install --upgrade pip
           pip install pytest
           pip install .
