--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -11,8 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        python-version: ["3.10"]
 
     steps:
       - name: Checkout repository
@@ -21,12 +19,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           chmod +x build-packmol.sh
-          bash build-packmol.sh
+          mkdir -p ${HOME}/.local/bin
+          bash build-packmol.sh 
+          export PATH=${HOME}/.local/bin:${PATH}
           python -m pip install --upgrade pip
           pip install pytest
           pip install .
