--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,19 +14,15 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: 3.x
 
       - name: Install dependencies
         run: |
-          chmod +x build-packmol.sh
-          mkdir -p ${HOME}/.local/bin
-          bash build-packmol.sh 
-          export PATH=${HOME}/.local/bin:${PATH}
           python -m pip install --upgrade pip
           pip install pytest
           pip install .
