--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 ]
 maintainers = [{ name = "João V. S. Guerra", email = "jvsguerra@gmail.com" }]
 license = { file = "LICENSE" }
-readme = { file = "README.md", content-type = "text/x-markdown" }
+readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.9"
 keywords = ["computational chemistry", "atom packing", "sphere packing"]
 classifiers = [
