--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ description = "A python package for packing nanoclusters into supramolecular cag
 authors = [
     { name = "João V. S. Guerra", email = "jvsguerra@gmail.com" },
     { name = "Gabriel E. Jara" },
+    { name = "Paulo S. Lopes-de-Oliveira" },
     { name = "György Szalóki" },
 ]
 maintainers = [{ name = "João V. S. Guerra", email = "jvsguerra@gmail.com" }]
@@ -16,7 +17,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.9"
 keywords = ["computational chemistry", "atom packing", "sphere packing"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     'Programming Language :: Python',
