Add grid-search optimization for rotation and translation, and filter clashing atoms in nanocluster (#43)
* Filter clashing atoms from cluster

* Add optimization procedure, clashing filter with tolerance, and logging optimization

* Update AtomPacker version

* Bump biopython from 1.83.0 to 1.84.0

* Add Paulo as author and change development status to Beta

* Update clashing tolerance to 0.0, check if rotations and translations are always inside the cavity, and set angles and translations to be explored in optimizaiton

* Fix header description in AtomPacker package

* Remove ValueError from cage.centroid

* Update UML in README.md

* Get radius for single-atom cluster, change logging to save disk usage, and add ValueError for clashing_tolerance

* Update testing for AtomPacker.Cage

* Add testing for AtomPacker.Cavity

* Add testing for AtomPacker pipeline to ensure integration quality

* Update dependencies

* Update dependencies (pyKVFinder, plotly)

* Fix one-atom cluster calculations

* Add testing for AtomPacker.Cluster

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ description = "A python package for packing nanoclusters into supramolecular cag
 authors = [
     { name = "João V. S. Guerra", email = "jvsguerra@gmail.com" },
     { name = "Gabriel E. Jara" },
+    { name = "Paulo S. Lopes-de-Oliveira" },
     { name = "György Szalóki" },
 ]
 maintainers = [{ name = "João V. S. Guerra", email = "jvsguerra@gmail.com" }]
@@ -16,7 +17,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.9"
 keywords = ["computational chemistry", "atom packing", "sphere packing"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     'Programming Language :: Python',
@@ -33,18 +34,18 @@ classifiers = [
 ]
 dependencies = [
     "ase==3.23.0",
-    "biopython==1.84",
+    "biopython==1.84.0",
     "MDAnalysis==2.7.0",
     "numpy==1.26.4",
     "pandas==2.2.2",
-    "plotly==5.22.0",
-    "pyKVFinder==0.6.14",
+    "plotly==5.23.0",
+    "pyKVFinder==0.6.15",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = ["black==24.4.2", "flake8==7.0.0", "pytest==8.2.2"]
-docs = ["sphinx==7.3.7", "sphinx-rtd-theme==2.0.0"]
+dev = ["black==24.4.2", "flake8==7.1.0", "pytest==8.2.2"]
+docs = ["sphinx==8.0.2", "sphinx-rtd-theme==2.0.0"]
 
 [project.urls]
 api = "https://cnpem.github.io/AtomPacker/"
