--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,9 @@ dependencies = [
     "ase==3.23.0",
     "biopython==1.84.0",
     "MDAnalysis==2.7.0",
-    "numpy==1.26.4",
-    "pandas==2.2.3",
-    "plotly==5.24.1",
+    "numpy~=1.26.4",
+    "pandas~=2.2.3",
+    "plotly~=5.24.1",
     "pyKVFinder==0.7.0",
 ]
 dynamic = ["version"]
