--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pytest
-          python -m pip install ./dist/AtomPacker-${{ github.event.release.tag_name }}-py3-none-any.whl
+          python -m pip install ./dist/atompacker-${{ github.event.release.tag_name }}-py3-none-any.whl
           python -c 'import AtomPacker; print(AtomPacker.__version__)'
           pytest tests --import-mode=importlib --verbose
 
