--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,12 +42,13 @@ dependencies = [
     "plotly>=6.0.0",
     "pyKVFinder>=0.8.0",
     "scikit-learn>=1.7.0",
+    "tqdm>=4.67.0",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
 dev = ["black==25.1.0", "flake8==7.3.0", "pytest==8.4.1"]
-docs = ["sphinx==8.2.3", "sphinx-rtd-theme==3.0.2"]
+docs = ["sphinx>=8.1.3", "sphinx-rtd-theme>=3.0.2"]
 
 [project.urls]
 homepage = "https://github.com/cnpem/AtomPacker"
