--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,15 +39,15 @@ dependencies = [
     "MDAnalysis>=2.9.0",
     "numpy>=2.2.0",
     "pandas>=2.3.0",
-    "plotly>=6.0.0",
-    "pyKVFinder>=0.8.0",
+    "plotly>=6.0.0,<6.6.0",
+    "pyKVFinder>=0.8.3",
     "scikit-learn>=1.7.0",
-    "tqdm>=4.67.0",
+    "tqdm>=4.67.0"
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = ["black==25.1.0", "flake8==7.3.0", "pytest==8.4.2"]
+dev = ["black==25.11.0", "flake8==7.3.0", "pytest==9.0.0"]
 docs = ["sphinx>=8.1.3", "sphinx-rtd-theme>=3.0.2"]
 
 [project.urls]
