--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: 3.13
 
       - uses: actions/download-artifact@v4
         with:
@@ -83,7 +83,7 @@ jobs:
     steps:
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: 3.13
 
       - uses: actions/download-artifact@v4
         with:
