--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=62.0", "wheel>=0.37.1"]
+requires = ["setuptools>=77.0.3,<81", "wheel>=0.45.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -8,11 +8,13 @@ description = "A python package for packing nanoclusters into supramolecular cag
 authors = [
     { name = "João V. S. Guerra", email = "jvsguerra@gmail.com" },
     { name = "Gabriel E. Jara" },
+    { name = "Rick H. Hokama" },
     { name = "Paulo S. Lopes-de-Oliveira" },
     { name = "György Szalóki" },
 ]
 maintainers = [{ name = "João V. S. Guerra", email = "jvsguerra@gmail.com" }]
-license = { file = "LICENSE" }
+license = "GPL-3.0-or-later"
+license-files = ["LICENSE"]
 readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.10"
 keywords = ["computational chemistry", "atom packing", "sphere packing"]
@@ -35,21 +37,21 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Physics",
 ]
 dependencies = [
-    "ase>=3.26.0",
-    "biopython>=1.85.0",
-    "MDAnalysis>=2.9.0",
-    "numpy>=2.2.0",
-    "pandas>=2.3.0",
+    "ase>=3.27.0,<4.0.0",
+    "biopython>=1.86.0",
+    "MDAnalysis>=2.10.0,<3.0.0",
+    "numpy>=2.0.0,<2.5.0",
+    "pandas>=3.0.0",
     "plotly>=6.0.0,<6.6.0",
-    "pyKVFinder>=0.8.3",
-    "scikit-learn>=1.7.0",
-    "tqdm>=4.67.0"
+    "pyKVFinder>=0.9.0,<1.0.0",
+    "scikit-learn>=1.8.0,<2.0.0",
+    "tqdm>=4.67.0",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-dev = ["black==25.11.0", "flake8==7.3.0", "pytest==9.0.1"]
-docs = ["sphinx>=8.1.3", "sphinx-rtd-theme>=3.0.2"]
+dev = ["black>=26.1.0", "flake8>=7.3.0", "pytest>=9.0.0"]
+docs = ["sphinx>=9.1.0", "sphinx-rtd-theme>=3.1.0"]
 
 [project.urls]
 homepage = "https://github.com/cnpem/AtomPacker"
