--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "biopython>=1.86.0",
     "MDAnalysis>=2.9.0,<3.0.0",
     "numpy>=2.0.0,<2.5.0",
-    "pandas>=3.0.0",
+    "pandas>=2.2.0,<3.1.0",
     "plotly>=6.0.0,<6.6.0",
     "pyKVFinder>=0.9.0,<1.0.0",
     "scikit-learn>=1.8.0,<2.0.0",
